# ROS-Localizer

./: README.md
aqua_description/: CMakeLists.txt  model.config  package.xml
aqua_description/launch/: aqua_description.launch  aqua_description.rviz  robot_description.launch
aqua_description/meshes/: aqua_red_m_low_res.STL  aqua_silver_m_low_res.STL  leg_joint.STL
aqua_description/src/: leg_state_publisher.cpp
aqua_description/urdf/: aqua.urdf.xacro  materials.urdf.xacro
aqua_gait/: .hgignore  CMakeLists.txt  package.xml
aqua_gait/include/aqua_gait/: Gaits.hpp  QTestGaitsGUI.hpp
aqua_gait/src/: Gaits.cpp  hover_midoff_node.cpp  test_gaits_gui.cpp  test_gaits_term.cpp
aqua_gait/srv/: UpdateTargetRPYD.srv
aqua_gazebo/: CMakeLists.txt  package.xml
aqua_gazebo/include/aqua_gazebo/: aqua_flippers_plugin.h  aqua_hardware_emulator.h  aqua_hydrodynamics_plugin.h
aqua_gazebo/launch/: aqua.launch  aqua_world.launch  headless.launch
aqua_gazebo/materials/: reef.material
aqua_gazebo/src/: aqua_flippers_plugin.cpp  aqua_hardware_emulator.cpp  aqua_hydrodynamics_plugin.cpp
aqua_gazebo/urdf/: aqua_gazebo.urdf.xacro  aqua_plugins.urdf.xacro
aqua_gazebo/worlds/: aqua.world  headless.world
aqua_utils/: .hgignore  CMakeLists.txt  package.xml
aqua_utils/cfg/: depth_emulator.cfg  depth_filter.cfg  gps_emulator.cfg  gps_filter.cfg
aqua_utils/cfg/cpp/aqua_utils/: DepthEmulatorConfig.h  DepthFilterConfig.h  GPSEmulatorConfig.h  GPSFilterConfig.h
aqua_utils/docs/: DepthEmulatorConfig-usage.dox  DepthEmulatorConfig.dox  DepthEmulatorConfig.wikidoc  DepthFilterConfig-usage.dox  DepthFilterConfig.dox  DepthFilterConfig.wikidoc  GPSEmulatorConfig-usage.dox  GPSEmulatorConfig.dox  GPSEmulatorConfig.wikidoc  GPSFilterConfig-usage.dox  GPSFilterConfig.dox  GPSFilterConfig.wikidoc
aqua_utils/src/: DepthFilterNode.cpp
aqua_utils/src/aqua_utils/cfg/: DepthEmulatorConfig.py  DepthFilterConfig.py  GPSEmulatorConfig.py  GPSFilterConfig.py
aquaautopilot/: .hgignore  CMakeLists.txt  package.xml  rosdep.yaml
aquaautopilot/cfg/: Autopilot.cfg
aquaautopilot/launch/: auto.launch
aquaautopilot/msg/: UberpilotStatus.msg
aquaautopilot/src/: local_autopilot_node.cpp
aquacore/: .hgignore  CMakeLists.txt  package.xml
aquacore/action/: ChangeDepth.action  DoSurfaceTask.action  Goto.action  SwimForward.action
aquacore/msg/: AutopilotModes.msg  Command.msg  GPSFixList.msg  Health.msg  KeepAlive.msg  PeriodicLegCommand.msg  StateMsg.msg  SurfaceTaskTypes.msg  Velocity.msg  cuROSTityScore.msg
aquacore/srv/: DumpAllVars.srv  EmptyBool.srv  EnableDepthControl.srv  GetAutopilotParams.srv  GetAutopilotState.srv  GetLegParams.srv  GetPeriodicLegCommand.srv  GetState.srv  GetTargetLegAngles.srv  Menu.srv  RunSimulationUntilTime.srv  SetAutopilotMode.srv  SetAutopilotParams.srv  SetDirection.srv  SetGait.srv  SetLegParams.srv  SetPauseMode.srv  SetPeriodicLegCommand.srv  SetTargetAngles.srv  SetTargetDepth.srv  SetTargetLegAngles.srv  SetUpRegulatedSwimMode.srv  StepSimulation.srv
aquajoy/: .hgignore  CMakeLists.txt  package.xml
aquajoy/cfg/: AquaTeleopJoy.cfg
aquajoy/cfg/cpp/aquajoy/: AquaTeleopJoyConfig.h
aquajoy/docs/: AquaTeleopJoyConfig-usage.dox  AquaTeleopJoyConfig.dox  AquaTeleopJoyConfig.wikidoc
aquajoy/msg/: AquaTeleopJoyParams.msg  AquaTeleopJoyState.msg
aquajoy/src/: aqua_key.cpp  aqua_key3D.cpp  aqua_key_walk.cpp  aqua_sim3D.cpp  aquajoy_deprecated.cpp  aquajoy_tf.cpp
aquajoy/src/aquajoy/cfg/: AquaTeleopJoyConfig.py
aquajoy/srv/: UpdateAquaTeleopJoyParams.srv
comp417_assign2/: CMakeLists.txt  package.xml
comp417_assign2/launch/: control_helpers.launch
comp417_assign2/src/: ground_truth_publisher.cpp  localizer_node.cpp
