<?xml version="1.0"?>
<package>
  <name>aquacore</name>
  <version>0.0.1</version>
  <description>
    This package contains msgs, srvs, actions, and launch files used by aqua. Nodes in this package should not depend on any other packages.
  </description>
  <maintainer email="yogesh@cim.mcgill.ca">Yogesh Girdhar</maintainer>
  <license>BSD</license>
  <author email="yogesh@cim.mcgill.ca">Yogesh Girdhar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
